[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/core/tools/species_editor_tool.gd" id="1"]

[node name="SpeciesEditorTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Species Editor Tool"
horizontal_alignment = 1
theme_type_variation = "HeaderLarge"

[node name="SpeciesList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create New Species"

[node name="ValidateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Validate All"

[node name="ExportButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Export Selected"

[node name="ImportButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Import JSON"

[node name="OutputText" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
placeholder_text = "Output and species information will appear here..."
editable = false
